[package]
name = "gv-subway"
version = "0.2.0"
authors = ["Krio Lyth <kriolyth@gmail.com>"]
edition = "2021"
description = "Godville dungeon explorer"
license = "Apache-2.0"
repository = "https://github.com/kriolyth/gv-subway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.30"
js-sys = "0.3"
image = { version = "0.24", default-features = false }
imageproc = { version = "0.23.0", default-features = false }
num-rational = {version="0.4.1", features=["std"], default-features = false}
bitvec = { version="^1", default-features=false, features=["std","alloc"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
